fix project card spacing

--- a/css/projects.css
+++ b/css/projects.css
@@ -55,9 +55,9 @@ body {
 #card-container {
   margin: 30px 10px;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .card {
